--- a/main.html
+++ b/main.html
@@ -5,9 +5,30 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Student Details</h1>
+	<table>
+		<thead>
+			<tr>
+				<th>NAME</th>
+				<th>AGE</th>
+				<th>BRANCH</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>Shaw</td>
+				<td>20</td>
+				<td>CSE</td>
+			</tr>
+			<tr>
+				<td>ADIL</td>
+				<td>21</td>
+				<td>ECE</td>
+			</tr>
+		</tbody>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
