--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>Student Details</h1>
+	<caption>Student Details</caption>
 	<table>
 		<thead>
 			<tr>
